tdf#107644: Crash on inserting formula

See https://bugs.documentfoundation.org/attachment.cgi?id=133085
Accessibility related

Change-Id: I87063e50a59b06f4f5a974764de9aa34e111b4fb
Reviewed-on: https://gerrit.libreoffice.org/37315
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 3d4938d2d8dc18c7b741efe90686f55f524fcfe2)